--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -27,25 +27,25 @@
   </ion-segment>
   <div [ngSwitch]="selectedSegment">
     <div *ngSwitchCase="segments.PAST_EVENTS">
-     <ion-list>
+      <ion-list>
         <div *ngIf="!pastEvents || pastEvents.length <= 0">
-            <ion-item *ngIf="!pastEvents || pastEvents.length <= 0" class="ion-text-center">
-              <ion-label>
-                <ion-text>Sem histórico de eventos ainda.</ion-text>
-              </ion-label>
-            </ion-item>
-            <div class="ion-text-center ion-margin">
-              <ion-button routerLink="/home">Procure um evento</ion-button>
-            </div>
+          <ion-item *ngIf="!pastEvents || pastEvents.length <= 0" class="ion-text-center">
+            <ion-label>
+              <ion-text>Sem histórico de eventos ainda.</ion-text>
+            </ion-label>
+          </ion-item>
+          <div class="ion-text-center ion-margin">
+            <ion-button routerLink="/home">Procure um evento</ion-button>
           </div>
+        </div>
         <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['./', pastEvent.id]">
           <ion-label>
-              <div class="events-details">
-                  <ion-icon name="calendar" color="primary"></ion-icon>
-                  <ion-text color="tertiary" class="space-left">
-                      {{ pastEvent.start_date | date }}
-                  </ion-text>
-                </div>
+            <div class="events-details">
+              <ion-icon name="calendar" color="primary"></ion-icon>
+              <ion-text color="tertiary" class="space-left">
+                {{ pastEvent.start_date | date }}
+              </ion-text>
+            </div>
             <h2>{{ pastEvent.title }}</h2>
             <p>R${{ pastEvent.price }}</p>
           </ion-label>
@@ -53,64 +53,64 @@
             <ion-img [src]="pastEvent.url_image"></ion-img>
           </ion-thumbnail>
         </ion-item>
-      </ion-list> 
+      </ion-list>
     </div>
     <div *ngSwitchCase="segments.CURRENT_EVENT">
-        <ion-list>
-          <div *ngIf="!currentEvent || currentEvent.length <= 0">
-            <ion-item *ngIf="!currentEvent || currentEvent.length <= 0" class="ion-text-center">
-              <ion-label>
-                <ion-text>Ainda não estou indo para nenhum evento.</ion-text>
-              </ion-label>
-            </ion-item>
-            <div class="ion-text-center ion-margin">
-              <ion-button routerLink="/home" >Que tal procurar por um?</ion-button>
-            </div>
+      <ion-list>
+        <div *ngIf="!currentEvent || currentEvent.length <= 0">
+          <ion-item *ngIf="!currentEvent || currentEvent.length <= 0" class="ion-text-center">
+            <ion-label>
+              <ion-text>Ainda não estou indo para nenhum evento.</ion-text>
+            </ion-label>
+          </ion-item>
+          <div class="ion-text-center ion-margin">
+            <ion-button routerLink="/home">Que tal procurar por um?</ion-button>
           </div>
-          <div *ngIf="currentEvent">
-            <ion-item 
-            *ngFor="let event of currentEvent"
-            [routerLink]="['./', event.id]">
-              <ion-label>
-                <div class="events-details">
-                    <ion-icon name="calendar" color="primary"></ion-icon>
-                    <ion-text color="tertiary" class="space-left">
-                        {{ event.start_date | date }}
-                    </ion-text>
-                </div>
-                <h2>{{ event.title }}</h2>
-                <p>R${{ event.price }}</p>
-              </ion-label>
-              <ion-thumbnail slot="end">
-                <ion-img [src]="event.url_image"></ion-img>
-              </ion-thumbnail>
-            </ion-item>
-          </div>
-          </ion-list>
-    </div>
-      <div *ngSwitchCase="segments.MY_EVENTS">
-        <ion-list>
-            <div *ngIf="!myEvents || myEvents.length <= 0">
-                <ion-item *ngIf="!myEvents || myEvents.length <= 0" class="ion-text-center">
-                  <ion-label>
-                    <h2>Não criei nenhum evento.</h2>
-                  </ion-label>
-                </ion-item>
+        </div>
+        <div *ngIf="currentEvent">
+          <ion-item *ngFor="let event of currentEvent" [routerLink]="['./', event.id]">
+            <ion-label>
+              <div class="events-details">
+                <ion-text color="tertiary" class="space-left">
+                  {{ event.title }}
+                </ion-text>
               </div>
-          <ion-item-sliding *ngFor="let event of myEvents" #slidingItem>
-            <app-my-events [myEvents] = event></app-my-events>
-            <ion-item-options>
-              <ion-item-option (click)="onEdit(event.id, slidingItem)">
-                <ion-icon name="create" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-            <ion-item-options side="start">
-              <ion-item-option color="danger" (click)="onDelete(event.id, slidingItem)">
-                <ion-icon name="trash" slot="icon-only"></ion-icon>
-              </ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-        </ion-list>
-      </div>
+              <p>
+                R${{ event.price }} -
+                {{ event.start_date | date }}
+              </p>
+            </ion-label>
+            <ion-badge slot="end" color="success" *ngIf="event.payment_confirmed">Pago</ion-badge>
+            <ion-thumbnail slot="end">
+              <ion-img [src]="event.url_image"></ion-img>
+            </ion-thumbnail>
+          </ion-item>
+        </div>
+      </ion-list>
     </div>
+    <div *ngSwitchCase="segments.MY_EVENTS">
+      <ion-list>
+        <div *ngIf="!myEvents || myEvents.length <= 0">
+          <ion-item *ngIf="!myEvents || myEvents.length <= 0" class="ion-text-center">
+            <ion-label>
+              <h2>Não criei nenhum evento.</h2>
+            </ion-label>
+          </ion-item>
+        </div>
+        <ion-item-sliding *ngFor="let event of myEvents" #slidingItem>
+          <app-my-events [myEvents]=event></app-my-events>
+          <ion-item-options>
+            <ion-item-option (click)="onEdit(event.id, slidingItem)">
+              <ion-icon name="create" slot="icon-only"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+          <ion-item-options side="start">
+            <ion-item-option color="danger" (click)="onDelete(event.id, slidingItem)">
+              <ion-icon name="trash" slot="icon-only"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+        </ion-item-sliding>
+      </ion-list>
+    </div>
+  </div>
 </ion-content>
