--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -76,7 +76,7 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
   
-  .deleteColor {
+  .alertDangerColor {
     color: red;
   }
 }
