--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -6,21 +6,24 @@
     <ion-title>
       Rangulos
     </ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons slot="primary">
+      <ion-button (click)="onLogout()">
+        <ion-icon name="exit" slot="icon-only"></ion-icon>      
+     </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
-  <ion-avatar class="ion-margin-start">
+  <ion-avatar class="ion-margin-start" class="ion-margin">
     <img [src]="profile.urlPhoto" />
   </ion-avatar>
   <ion-item>
     <ion-label position="stacked">Nome</ion-label>
     <ion-input [placeholder]="profile.name"></ion-input>
-  </ion-item>
+    <ion-icon name="contact" slot="start"></ion-icon>  </ion-item>
   <ion-item>
     <ion-label position="stacked">E-mail</ion-label>
-
     <ion-input [placeholder]="profile.email"></ion-input>
     <ion-icon name="mail" slot="start"></ion-icon>
   </ion-item>
