--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,23 @@
 <ion-app>
-  <ion-split-pane>
-    <ion-menu type="overlay">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content>
-        <ion-list>
-          <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
-              <ion-label>
-                {{p.title}}
-              </ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-          <ion-menu-toggle>
-            <ion-item (click)="onLogout()">
-                <ion-icon slot="start" name="exit"></ion-icon>
-                <ion-label>Logout</ion-label>
-            </ion-item>
-          </ion-menu-toggle>
-        </ion-list>
-      </ion-content>
-    </ion-menu>
-    <ion-router-outlet main></ion-router-outlet>
-  </ion-split-pane>
+        <ion-tabs>
+          <ion-tab-bar slot="bottom">
+            <ion-tab-button tab="home">
+              <ion-icon name="home"></ion-icon>
+              <ion-label>Inicío</ion-label>
+              <!-- mostrar quando tiver eventos novos -->
+              <!-- <ion-badge>6</ion-badge> -->
+            </ion-tab-button>
+      
+            <ion-tab-button tab="events">
+              <ion-icon name="restaurant"></ion-icon>
+              <ion-label>Eventos</ion-label>
+            </ion-tab-button>
+      
+            <ion-tab-button tab="profile">
+              <ion-icon name="person"></ion-icon>
+              <ion-label>Perfil</ion-label>
+            </ion-tab-button>
+          </ion-tab-bar>
+        </ion-tabs>
+    <!-- <ion-router-outlet main></ion-router-outlet> -->
 </ion-app>
