--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,3 @@
 <ion-app>
-        <ion-tabs>
-          <ion-tab-bar slot="bottom">
-            <ion-tab-button tab="home">
-              <ion-icon name="home"></ion-icon>
-              <ion-label>Inicío</ion-label>
-              <!-- mostrar quando tiver eventos novos -->
-              <!-- <ion-badge>6</ion-badge> -->
-            </ion-tab-button>
-      
-            <ion-tab-button tab="events">
-              <ion-icon name="restaurant"></ion-icon>
-              <ion-label>Eventos</ion-label>
-            </ion-tab-button>
-      
-            <ion-tab-button tab="profile">
-              <ion-icon name="person"></ion-icon>
-              <ion-label>Perfil</ion-label>
-            </ion-tab-button>
-          </ion-tab-bar>
-        </ion-tabs>
-    <!-- <ion-router-outlet main></ion-router-outlet> -->
+    <ion-router-outlet main></ion-router-outlet>
 </ion-app>
