--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
       <ion-text>Não há eventos por perto</ion-text>
     </ion-item>
     <div class="ion-text-center ion-margin">
-      <ion-button routerLink="/events/new">Que tal criar um?</ion-button>
+      <ion-button routerLink="/tabs/events/new">Que tal criar um?</ion-button>
     </div>
   </div>
 
