--- a/src/app/events/my-events/edit-my-events/edit-my-events.page.html
+++ b/src/app/events/my-events/edit-my-events/edit-my-events.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="tertiary">
     <ion-title>Editando: {{ event?.title }}</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/events"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/events"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
       <ion-button (click)="onUpdateEvent()" [disabled]="form?.invalid">
