--- a/src/app/events/new-event/new-event.page.html
+++ b/src/app/events/new-event/new-event.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="tertiary">
     <ion-title>Novo evento</ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/events"></ion-back-button>
+      <ion-back-button defaultHref="tabs/events"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
       <ion-button (click)="onCreateEvent()" [disabled]="form.invalid">
