--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -10,6 +10,18 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-list>
+
+              <ion-item *ngIf="!isLogin">
+                  <ion-label position="floating">Nome</ion-label>
+                  <ion-input
+                    type="text"
+                    ngModel
+                    name="name"
+                    required
+                    #nameCtrl="ngModel"
+                  ></ion-input>
+                </ion-item>
+
             <ion-item>
               <ion-label position="floating">E-Mail</ion-label>
               <ion-input
@@ -40,6 +52,9 @@
                 #passwordCtrl="ngModel"
               ></ion-input>
             </ion-item>
+
+           
+
             <ion-item
               *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
               lines="none"
@@ -54,13 +69,24 @@
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
           <ion-button
+            *ngIf="isLogin"
             type="submit"
             color="primary"
             (click)="onLogin()"
             expand="block"
             [disabled]="!f.valid"
           >
-            {{ isLogin ? 'Entrar' : 'Registrar' }}
+            Entrar
+          </ion-button>
+          <ion-button
+            *ngIf="!isLogin"
+            type="submit"
+            color="primary"
+            (click)="onRegister()"
+            expand="block"
+            [disabled]="!f.valid"
+          >
+            Registrar
           </ion-button>
           <ion-button 
           type="button" 
