--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="tertiary">
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/home"></ion-back-button>
     </ion-buttons>
     <ion-title> Evento</ion-title>
   </ion-toolbar>
@@ -36,7 +36,7 @@
             <p>{{ loadedEvent.max_guests }} pessoas</p>
           </ion-label>
         </ion-item>
-        <ion-item>
+        <ion-item (click)="openAddress()">
           <ion-icon name="globe" slot="start"></ion-icon>
           <ion-label class="ion-text-wrap">
             <h2>Endereço</h2>
