--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -19,7 +19,6 @@
         <ion-text color="primary">R{{ loadedEvent.price | currency }}</ion-text>
       </ion-card-title>
     </ion-card-header>
-
     <ion-card-content>
       <div class="ion-text-wrap">
         {{ loadedEvent.about }}
@@ -36,7 +35,7 @@
           <ion-icon name="people" slot="start"></ion-icon>
           <ion-label>
             <h2>Quantidade máxima</h2>
-            <p>{{ loadedEvent.max_guests }} pessoas</p>
+            <p>{{ loadedEvent.max_guests }} pessoas | confirmados: {{ loadedEvent.total_guests }}</p>
           </ion-label>
         </ion-item>
         <ion-item (click)="openAddress()">
@@ -50,23 +49,40 @@
     </ion-card-content>
     <ion-grid>
       <ion-row>
-        <ion-col *ngIf="isEventEnded()">
-          <ion-button (click)="onRate()" expand="block" color="primary">
-            Avaliar
-          </ion-button>
-        </ion-col>
         <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner">
           <ion-button (click)="onPayEvent()" expand="block" color="primary">
             Pagar
           </ion-button>
         </ion-col>
         <ion-col>
-          <ion-button *ngIf="!isEventEnded() && !loadedEvent.is_owner"(click)="onDeleteCurrent(loadedEvent.id) "expand="block" color="danger">
+          <ion-button *ngIf="!isEventEnded() && loadedEvent.is_owner && !loadedEvent.deleted_at" (click)="onDelete(loadedEvent.id) "
+            expand="block" color="danger">
             Cancelar
           </ion-button>
         </ion-col>
       </ion-row>
+      <ion-row>
+          <ion-col>
+              <ion-button *ngIf="!isEventEnded() && loadedEvent.is_owner && loadedEvent.deleted_at" (click)="onReactivate(loadedEvent.id) "
+                expand="block" color="success">
+                Reativar
+              </ion-button>
+            </ion-col>
+      </ion-row>
     </ion-grid>
-    
+  </ion-card>
+  <ion-card *ngIf="isEventEnded() && !loadedEvent.is_owner">
+    <ion-card-content>
+      <ion-item>
+        <ion-label>Avaliação</ion-label>
+        <ion-select okText="confirmar" cancelText="cancelar" (ionChange)="onRate($event)">]
+          <ion-select-option value="1">1 estrela</ion-select-option>
+          <ion-select-option value="2">2 estrelas</ion-select-option>
+          <ion-select-option value="3">3 estrelas</ion-select-option>
+          <ion-select-option value="4">4 estrelas</ion-select-option>
+          <ion-select-option value="5">5 estrelas</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-card-content>
   </ion-card>
 </ion-content>
