--- a/src/app/events/new-event/new-event.page.html
+++ b/src/app/events/new-event/new-event.page.html
@@ -58,9 +58,9 @@
             <ion-col>
               <ion-item>
                   <ion-label position="floating">Endereço</ion-label>
-                  
-                  <ion-textarea formControlName="address">
-  
+                <ion-textarea 
+                formControlName="address"
+                 placeholder="Rua/Avenida, número, bairro - cidade, sigla do estado">
                   </ion-textarea>
               </ion-item>
             </ion-col>
