--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -8,30 +8,24 @@
         <ion-icon name="create" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Detalhes do evento</ion-title>
+    <ion-title>Evento</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
   <ion-card *ngIf="loadedEvent">
 
     <form [formGroup]="uploadForm">
-      <ion-img 
-      (click)="onUpload()"
-      [src]="loadedEvent.url_image ? loadedEvent.url_image : 'assets/img/no-image.png'"></ion-img>
-      <input 
-      type="file"
-      (change)="onFileAdded($event)"
-      #file
-      style="display: none"
-      >
+      <ion-img (click)="onUpload()" [src]="loadedEvent.url_image ? loadedEvent.url_image : 'assets/img/no-image.png'">
+      </ion-img>
+      <input type="file" (change)="onFileAdded($event)" #file style="display: none">
     </form>
 
     <ion-card-header>
       <ion-card-subtitle>
         {{ loadedEvent.start_date| date }} - {{ loadedEvent.end_date | date}}
-        <ion-badge *ngIf="isEventEnded()">finalizado</ion-badge>
+        <ion-badge color="danger" *ngIf="isEventEnded()">finalizado</ion-badge>
       </ion-card-subtitle>
-      <ion-card-title>{{ loadedEvent.title }} -
+      <ion-card-title>{{ loadedEvent.title }}
         <ion-text color="primary">R{{ loadedEvent.price | currency }}</ion-text>
       </ion-card-title>
     </ion-card-header>
@@ -70,22 +64,26 @@
         </ion-item>
       </ion-list>
     </ion-card-content>
-    <ion-grid>
-      <ion-row>
-        <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner">
-          <ion-button (click)="onPayEvent()" expand="block" color="primary">
-            Pagar
-          </ion-button>
-        </ion-col>
-        <ion-col>
-          <ion-button *ngIf="!isEventEnded() && loadedEvent.is_owner && !loadedEvent.deleted_at" (click)="onDelete(loadedEvent.id) "
-            expand="block" color="danger">
-            Cancelar
-          </ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
   </ion-card>
+  <ion-grid *ngIf="loadedEvent" class="ion-padding-horizontal">
+    <ion-row>
+      <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && loadedEvent.is_guest">
+        <ion-button color="success" (click)="onPayEvent()" expand="block">
+          Pagar
+        </ion-button>
+      </ion-col>
+      <ion-col *ngIf="!isEventEnded() && loadedEvent.is_owner && !loadedEvent.deleted_at">
+        <ion-button (click)="onDelete(loadedEvent.id) " expand="block" color="danger">
+          Cancelar
+        </ion-button>
+      </ion-col>
+      <ion-col *ngIf="!isEventEnded() && !loadedEvent.is_owner && !loadedEvent.is_guest">
+        <ion-button (click)="onEnsureInvitation()" expand="block" color="primary" *ngIf="!loadedEvent.is_owner">
+          Garantir convite
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-card *ngIf="isEventEnded() && !loadedEvent.is_owner">
     <ion-card-content>
       <ion-item>
