--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,83 +1,48 @@
-<ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-title>{{ isLogin ? 'Autenticação' : 'Registrar' }}</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content color="primary">
+  <div class="ion-text-center ion-padding">
+    <img src="assets/img/logo-rangulos.png" style="width: 120px;">
+  </div>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-card color="white">
+      <ion-list>
+        <ion-item color="white">
+          <ion-label position="floating">Email</ion-label>
+          <ion-input type="email" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+        </ion-item>
+        <ion-item color="white" *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+          <ion-badge>
+            Deve conter um e-mail válido
+          </ion-badge>
+        </ion-item>
+        <ion-item color="white">
+          <ion-label position="floating">Senha</ion-label>
+          <ion-input type="password" ngModel name="password" required minlength="6" #passwordCtrl="ngModel">
+          </ion-input>
+        </ion-item>
+        <ion-item color="white" *ngIf="!passwordCtrl.valid && passwordCtrl.touched" lines="none">
+          <ion-badge>
+            Senha deve ter no mínimo 6 caracteres
+          </ion-badge>
+        </ion-item>
+      </ion-list>
+      <ion-card-content>
+        <ion-button *ngIf="isLogin" type="submit" color="primary" (click)="onLogin()" expand="block"
+          [disabled]="!f.valid">
+          Entrar
+        </ion-button>
+      </ion-card-content>
+    </ion-card>
+    <div class="ion-padding">
+      <ion-button fill="outline" color="light" expand="block">
+        Criar conta
+      </ion-button>
+    </div>
 
-<ion-content padding>
- <form #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <ion-grid>
+
+    <!-- <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
-          <ion-list>
-
-              <ion-item *ngIf="!isLogin">
-                  <ion-label position="floating">Nome</ion-label>
-                  <ion-input
-                    type="text"
-                    ngModel
-                    name="name"
-                    required
-                    #nameCtrl="ngModel"
-                  ></ion-input>
-                </ion-item>
-
-            <ion-item>
-              <ion-label position="floating">E-Mail</ion-label>
-              <ion-input
-                type="email"
-                ngModel
-                name="email"
-                required
-                email
-                #emailCtrl="ngModel"
-              ></ion-input>
-            </ion-item>
-            <ion-item
-              *ngIf="!emailCtrl.valid && emailCtrl.touched"
-              lines="none"
-            >
-              <ion-badge>
-                Deve conter um e-mail válido
-              </ion-badge>
-            </ion-item>
-            <ion-item>
-              <ion-label position="floating">Senha</ion-label>
-              <ion-input
-                type="password"
-                ngModel
-                name="password"
-                required
-                minlength="6"
-                #passwordCtrl="ngModel"
-              ></ion-input>
-            </ion-item>
-
-           
-
-            <ion-item
-              *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
-              lines="none"
-            >
-              <ion-badge>
-                Senha deve ter no mínimo 6 caracteres
-              </ion-badge>
-            </ion-item>
-          </ion-list>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-sm="6" offset-sm="3">
-          <ion-button
-            *ngIf="isLogin"
-            type="submit"
-            color="primary"
-            (click)="onLogin()"
-            expand="block"
-            [disabled]="!f.valid"
-          >
-            Entrar
-          </ion-button>
+         
           <ion-button
             *ngIf="!isLogin"
             type="submit"
@@ -98,6 +63,10 @@
           </ion-button>
         </ion-col>
       </ion-row>
-    </ion-grid>
+      <ion-row>
+        <ion-col size-sm="4" offset="3">
+        </ion-col>
+      </ion-row>
+    </ion-grid> -->
   </form>
 </ion-content>
