--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -6,11 +6,6 @@
     <ion-title>
       Eventos
     </ion-title>
-    <ion-buttons slot="primary">
-      <ion-button routerLink="/tabs/events/new">
-        <ion-icon name="add" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
   <ion-toolbar>
     <ion-segment (ionChange)="onSegmentChanged($event)" [value]="selectedSegment">
@@ -29,6 +24,9 @@
 <ion-content>
 
   <div [ngSwitch]="selectedSegment">
+      <div class="ion-text-center ion-padding" *ngIf="isLoading">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
     <div *ngSwitchCase="segments.PAST_EVENTS">
       <ion-list>
         <div *ngIf="!pastEvents || pastEvents.length <= 0">
@@ -73,7 +71,7 @@
           </div>
         </div>
         <div *ngIf="currentEvent">
-          <ion-item *ngFor="let event of currentEvent" [routerLink]="['./' + event.id]">
+          <ion-item *ngFor="let event of currentEvent" [routerLink]="['/events/' + event.id]">
             <ion-label class="ion-text-wrap">
               <ion-badge slot="end" color="danger" *ngIf="event.deleted_at">Cancelado</ion-badge>
               <div class="events-details">
@@ -104,7 +102,7 @@
           </ion-item>
         </div>
         <ion-item-sliding *ngFor="let event of myEvents" #slidingItem>
-          <ion-item [routerLink]="['./' + event.id]">
+          <ion-item [routerLink]="['/events/' + event.id]">
             <ion-label class="ion-text-wrap">
               <ion-badge slot="end" color="danger" *ngIf="event.deleted_at">Suspenso</ion-badge>
               <div class="events-details">
@@ -137,7 +135,7 @@
     </div>
   </div>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="ion-margin-vertical">
-    <ion-fab-button [routerLink]="['/tabs/events/new']">
+    <ion-fab-button [routerLink]="['/new']">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
