edit event title

--- a/src/app/events/my-events/edit-my-events/edit-my-events.page.html
+++ b/src/app/events/my-events/edit-my-events/edit-my-events.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title>Editando: {{ event?.title }}</ion-title>
+    <ion-title>Editando</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/tabs/events"></ion-back-button>
     </ion-buttons>
