--- a/src/app/profile/profile.page.html
+++ b/src/app/profile/profile.page.html
@@ -6,27 +6,26 @@
     <ion-title>
       Rangulos
     </ion-title>
-    <ion-buttons slot="primary">
-      <ion-button (click)="onLogout()">
-        <ion-icon name="exit" slot="icon-only"></ion-icon>      
-     </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list *ngIf="profile">
-    <ion-avatar class="ion-margin-start" class="ion-margin">
-      <img [src]="profile.urlPhoto" />
-    </ion-avatar>
+  <div class="ion-text-center ion-padding" *ngIf="isLoading">
+    <ion-spinner color="primary"></ion-spinner>
+  </div>
+  <ion-card *ngIf="profile && !isLoading">
     <ion-item>
-      <ion-label position="stacked">Nome</ion-label>
-      <ion-input [placeholder]="profile.name"></ion-input>
-      <ion-icon name="contact" slot="start"></ion-icon>  </ion-item>
-    <ion-item>
-      <ion-label position="stacked">E-mail</ion-label>
-      <ion-input [placeholder]="profile.email"></ion-input>
-      <ion-icon name="mail" slot="start"></ion-icon>
+      <ion-thumbnail slot="start">
+        <img [src]="profile.urlPhoto" />
+      </ion-thumbnail>
+      <ion-label>
+        <h2>{{ profile.name }}</h2>
+        <p>{{ profile.email }}</p>
+      </ion-label>
+      <ion-button slot="end" (click)="onLogout()" color="danger">
+        <ion-icon name="exit"></ion-icon>
+      </ion-button>
     </ion-item>
-  </ion-list>
+  </ion-card>
+
 </ion-content>
